# WDM-TRITON

./: .env  .gitignore  Dockerfile  README.md  create_chroma.py  create_chroma_db.py  create_milvus_bge_text.py  create_milvus_colbert.py  create_milvus_db.py  demo.py  demo.sh  deploy.yaml  eval.py  eval.sh  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: actions.yaml
backend/: requirements.txt  test_gemini.py  test_llm_parsing.py
backend/src/: config.py
backend/src/database/: base.py  factory.py  milvus.py
backend/src/database/implementations/: milvus.py
backend/src/services/embedding_service/: factory.py
backend/src/services/llm_service/: base.py  factory.py
backend/src/services/parsing_service/: docling_parsing.py  llm_parsing.py
backend/tests/: conftest.py
eval/: rag.py  retrieval.py
scripts/: eval.sh
src/datasets/: __init__.py  dataset.py  m3docvqa.py
src/db/: chroma_client.py  milvus.py
src/models/embedding/: bge_m3.py  colpali.py  llm.py
src/models/parser/: llm_parsing.py  llm_parsing_v2.py  llm_tables_parser.py  llm_text_parser.py  smol_docling.py
src/services/: generate_table_questions.py  generate_table_questions_v2.py  llm.py  parser.py  prepare_data.py  question_embeddding.py  utils.py
src/services/dataset/: create_chroma.py  create_milvus_bge_table.py  create_milvus_bge_text.py  create_table_data.py  generate_table_questions.py
src/services/eval/: __init__.py  multimodal_eval.py  rag_eval.py
src/services/processing/: table_processing.py  text_processing.py
(+24 files in other folders)
