[project]
name = "document-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.10",
    "deepeval==2.9.7",
    "docling-core==2.31.2",
    "jsonlines==3.1.0",
    "langchain==0.3.25",
    "langchain-core==0.3.62",
    "langchain-google-genai==2.1.5",
    "langchain-openai==0.3.18",
    "loguru==0.7.3",
    "numpy==1.26.4",
    "openai==1.82.0",
    "pdf2image==1.17.0",
    "pillow==11.2.1",
    "protobuf==4.25.7",
    "pymilvus[model]==2.5.8",
    "pymilvus-model==0.3.2",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "scipy==1.15.3",
    "torch==2.7.0",
    "transformers==4.51.3",
    "ragas>=0.2.15",
    "flagembedding>=1.3.5",
]
